# lorentz_gas_simulator

./: .gitignore  CMakeLists.txt
include/: cell_list.h  config.h  container.h  dynamic_correlations_mpi.h  globals.h  io.h  mc_obstacles.h  mytime.h  neighbourlist.h  neighbourlist_circular.h  neighbourlist_linear.h  neighbourlist_simple.h  obstacles.h  obstacles_binary.h  obstacles_circles.h  obstacles_crosses.h  obstacles_squares.h  propagator_circular.h  propagator_circular_binary.h  propagator_circular_fast.h  propagator_linear.h  propagator_linear_0.h  propagator_simple.h  propagator_simple_binary.h  propagator_windtree.h  propagators.h  shapes_segments.h  simulationbox.h  simulationbox_binary.h  simulationbox_circles.h  simulationbox_crosses.h  simulationbox_squares.h  stat_corr.h  stencil_circular.h  stencil_full_trimmed_periodic.h  stencil_linear.h  stencils.h  timescales.h  trajectory.h  trajectory_circular.h  (+1 more)
src/: globals.cpp  main_mpi_0.cpp  main_mpi_B.cpp  stat_corr.cpp
